Fixed Products Drop-Down Menu

--- a/index.html
+++ b/index.html
@@ -23,11 +23,94 @@
         <img src="./Resources/homepage_1st_fold.jpg" alt="Image" id="hero-img">
 
         <div id="nav-bar">
-            <a><img src="./Resources/dhan-logo-new1.png" alt="logo" id="nav-bar-logo" style="max-width: 8.1rem;"></a>
+            <span id="nav-bar-logo">
+                <a href="#">
+                    <img src="./Resources/dhan-logo-new1.png" alt="logo" style="max-width: 8.1rem;">
+                </a>
+            </span>
+
             <div id="nav-links-and-buttons">
                 <ul id="nav-bar-links">
                     <li id="products">
                         <a href="#">Products <i class="fa-solid fa-angle-down"></i></a>
+
+                        <div id="products-options">
+                            <ul id="products-options-contents">
+                                <li>
+                                    <img class="w-18 mr-18" src="./Resources/drop-1.svg" alt="image">
+                                    <span class="investments-options-contents-heading">
+                                        <b class="fw-600">Dhan App</b>
+                                        <p class="fs-14">Lighting Fast Online Trading & investing App for India.</p>
+                                    </span>
+                                </li>
+
+                                <li>
+                                    <img class="w-18 mr-18" src="./Resources/drop-5.svg" alt="image">
+                                    <span class="investments-options-contents-heading">
+                                        <b class="fw-600">Dhan Web</b>
+                                        <p class="fs-14">Bigger Screen, Better Experience for Trading & Investing on Web.</p>
+                                    </span>
+                                </li>
+
+                                <li>
+                                    <img class="w-18 mr-18" src="./Resources/drop-3.svg" alt="image">
+                                    <span class="investments-options-contents-heading">
+                                        <b class="fw-600">Options Trader App</b>
+                                        <p class="fs-14">Options Trading App built for Indian F&O Traders.</p>
+                                    </span>
+                                </li>
+
+                                <li>
+                                    <img class="w-18 mr-18" src="./Resources/headerdrop.svg" alt="image">
+                                    <span class="products-options-contents-heading">
+                                        <b class="fw-600">Options Trader Web</b>
+                                        <p class="fs-14">Build, Analyze & Execute F&O Strategies from One Platform.</p>
+                                    </span>
+                                </li>
+
+                                <li>
+                                    <img class="w-18 mr-18" src="./Resources/tv_dhan_header.svg" alt="image">
+                                    <span class="products-options-contents-heading">
+                                        <b class="fw-600">Trade on tv.dhan.co</b>
+                                        <p class="fs-14">Trade Options, Futures & more from Charts om Dhan + TradingView.</p>
+                                    </span>
+                                </li>
+
+                                <li>
+                                    <img class="w-18 mr-18" src="./Resources/tv_panel_header.svg" alt="image">
+                                    <span class="products-options-contents-heading">
+                                        <b class="fw-600">Connect to TradingView</b>
+                                        <p class="fs-14">First time in India - Place orders directly from tradingview.com</p>
+                                    </span>
+                                </li>
+
+                                <li>
+                                    <img class="w-18 mr-18" src="./Resources/drop-2.svg" alt="image">
+                                    <span class="products-options-contents-heading">
+                                        <b class="fw-600">DhanHQ Trading APIs</b>
+                                        <p class="fs-14">Superfast Trading & Investing APIs for Traders & Investers.</p>
+                                    </span>
+                                </li>
+
+                                <li>
+                                    <img class="w-18 mr-18" src="./Resources/smallcase.svg" alt="image">
+                                    <span class="products-options-contents-heading">
+                                        <b class="fw-600">smallcases on Dhan</b>
+                                        <p class="fs-14">Build a diversified, low-cost & long term portfolio with smallcases.</p>
+                                    </span>
+                                </li>
+
+                                <li id="margin-trading-facility">
+                                    <img class="w-18 mr-18" src="./Resources/mtf investment dropdown icon.svg"
+                                        alt="image">
+                                    <span class="products-options-contents-heading">
+                                        <b class="fw-600">Margin Trading Facility</b>
+                                        <p class="fs-14">Get 4X Leverage to Invest & Trade in 950+ Stocks with MTF Estimator, Unloimited Holding Period, and a Simple Order Flow.</p>
+                                    </span>
+                                </li>
+
+                            </ul>
+                        </div>
                     </li>
 
                     <li id="investments">
@@ -39,7 +122,8 @@
                                     <img class="w-18 mr-18" src="./Resources/graph_arrow.svg" alt="image">
                                     <span class="investments-options-contents-heading">
                                         <b class="fw-600">Stocks</b>
-                                        <p class="fs-14">Instant margins and pledge benefit for online stock trading.</p>
+                                        <p class="fs-14">Instant margins and pledge benefit for online stock trading.
+                                        </p>
                                     </span>
                                 </li>
 
@@ -52,15 +136,16 @@
                                 </li>
 
                                 <li>
-                                    <img class="w-18 mr-18"  src="./Resources/OPTIONS_2.svg" alt="image">
+                                    <img class="w-18 mr-18" src="./Resources/OPTIONS_2.svg" alt="image">
                                     <span class="investments-options-contents-heading">
                                         <b class="fw-600">Options</b>
-                                        <p class="fs-14">Pre-built strategies & Advance Option Chain for options trading.</p>
+                                        <p class="fs-14">Pre-built strategies & Advance Option Chain for options
+                                            trading.</p>
                                     </span>
                                 </li>
 
                                 <li>
-                                    <img class="w-18 mr-18"  src="./Resources/CURRENCY_2.svg" alt="image">
+                                    <img class="w-18 mr-18" src="./Resources/CURRENCY_2.svg" alt="image">
                                     <span class="investments-options-contents-heading">
                                         <b class="fw-600">Currency</b>
                                         <p class="fs-14">real-time data, VWAP, & more for currency trading.</p>
@@ -68,15 +153,16 @@
                                 </li>
 
                                 <li>
-                                    <img class="w-18 mr-18"  src="./Resources/FUTURES_2.svg" alt="image">
+                                    <img class="w-18 mr-18" src="./Resources/FUTURES_2.svg" alt="image">
                                     <span class="investments-options-contents-heading">
                                         <b class="fw-600">Futures</b>
-                                        <p class="fs-14">TradingView Charts, Trailing stop-loss, & more for futures trading.</p>
+                                        <p class="fs-14">TradingView Charts, Trailing stop-loss, & more for futures
+                                            trading.</p>
                                     </span>
                                 </li>
 
                                 <li>
-                                    <img class="w-18 mr-18"  src="./Resources/ETF_2.svg" alt="image">
+                                    <img class="w-18 mr-18" src="./Resources/ETF_2.svg" alt="image">
                                     <span class="investments-options-contents-heading">
                                         <b class="fw-600">ETF</b>
                                         <p class="fs-14">Trading & investing in ETFs made simply awesome.</p>
@@ -95,9 +181,8 @@
                 </span>
             </div>
         </div>
-    </div>
 
-    <section id="hero-section">Ashish Yadav</section>
+    </div>
 
 </body>
 
