Fixed Products Drop-Down Menu

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                                     <img class="w-18 mr-18" src="./Resources/drop-5.svg" alt="image">
                                     <span class="investments-options-contents-heading">
                                         <b class="fw-600">Dhan Web</b>
-                                        <p class="fs-14">Bigger Screen, Better Experience for Trading & Investing on Web.</p>
+                                        <p class="fs-14">Bigger Screen, Better Experience for Trading & Investing on
+                                            Web.</p>
                                     </span>
                                 </li>
 
@@ -72,7 +73,8 @@
                                     <img class="w-18 mr-18" src="./Resources/tv_dhan_header.svg" alt="image">
                                     <span class="products-options-contents-heading">
                                         <b class="fw-600">Trade on tv.dhan.co</b>
-                                        <p class="fs-14">Trade Options, Futures & more from Charts om Dhan + TradingView.</p>
+                                        <p class="fs-14">Trade Options, Futures & more from Charts om Dhan +
+                                            TradingView.</p>
                                     </span>
                                 </li>
 
@@ -80,7 +82,8 @@
                                     <img class="w-18 mr-18" src="./Resources/tv_panel_header.svg" alt="image">
                                     <span class="products-options-contents-heading">
                                         <b class="fw-600">Connect to TradingView</b>
-                                        <p class="fs-14">First time in India - Place orders directly from tradingview.com</p>
+                                        <p class="fs-14">First time in India - Place orders directly from
+                                            tradingview.com</p>
                                     </span>
                                 </li>
 
@@ -96,19 +99,20 @@
                                     <img class="w-18 mr-18" src="./Resources/smallcase.svg" alt="image">
                                     <span class="products-options-contents-heading">
                                         <b class="fw-600">smallcases on Dhan</b>
-                                        <p class="fs-14">Build a diversified, low-cost & long term portfolio with smallcases.</p>
+                                        <p class="fs-14">Build a diversified, low-cost & long term portfolio with
+                                            smallcases.</p>
                                     </span>
                                 </li>
 
                                 <li id="margin-trading-facility">
                                     <img class="w-18 mr-18" src="./Resources/mtf investment dropdown icon.svg"
-                                        alt="image">
+                                        alt="image" style="width: 9%">
                                     <span class="products-options-contents-heading">
                                         <b class="fw-600">Margin Trading Facility</b>
-                                        <p class="fs-14">Get 4X Leverage to Invest & Trade in 950+ Stocks with MTF Estimator, Unloimited Holding Period, and a Simple Order Flow.</p>
+                                        <p class="fs-14">Get 4X Leverage to Invest & Trade in 950+ Stocks with MTF
+                                            Estimator, Unloimited Holding Period, and a Simple Order Flow.</p>
                                     </span>
                                 </li>
-
                             </ul>
                         </div>
                     </li>
@@ -179,6 +183,12 @@
                     <a href="#" id="signup">Open Demat Account</a>
                     <a href="#" id="login">Login</a>
                 </span>
+            </div>
+        </div>
+
+        <div id="hero-section">
+            <div id="hero-text">
+                <img src="./Resources/light-striking.svg" alt="image">
             </div>
         </div>
 
